Updated destinations source to destination. Fixed dim_destinations with names

--- a/models/theme_parks_source.yml
+++ b/models/theme_parks_source.yml
@@ -5,7 +5,7 @@ sources:
     schema: "{{ env_var('DBT_TARGET_SCHEMA') }}"
     description: Data synced from tap-theme-parks.
     tables:
-      - name: destinations
+      - name: destination
         description: Destinations and their parks
       - name: destination_detail
         description: Destinations and their details
